@@ -13,6 +13,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.enablePreview>true</maven.compiler.enablePreview>
         <jakartaee.version>10.0.0</jakartaee.version>
+        <jandex.version>3.1.5</jandex.version>
     </properties>
 
     <dependencies>
@@ -20,7 +21,6 @@
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-core-api</artifactId>
             <version>${jakartaee.version}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -28,10 +28,21 @@
             <version>1.18.30</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>com.flowlogix</groupId>-->
+<!--            <artifactId>weld-repackaged</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--            <classifier>native</classifier>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.jboss.weld.se</groupId>
-            <artifactId>weld-se-shaded</artifactId>
+            <artifactId>weld-se-core</artifactId>
             <version>5.1.2.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>io.smallrye</groupId>
+            <artifactId>jandex</artifactId>
+            <version>${jandex.version}</version>
         </dependency>
     </dependencies>
 
@@ -42,10 +53,28 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <compilerArgs>
-                        <compilerArg>-proc:full</compilerArg>
-                    </compilerArgs>
+                    <proc>full</proc>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>io.smallrye</groupId>
+                <artifactId>jandex-maven-plugin</artifactId>
+                <version>3.1.5</version>
+                <executions>
+                    <execution>
+                        <id>make-index</id>
+                        <goals>
+                            <goal>jandex</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>io.smallrye</groupId>
+                        <artifactId>jandex</artifactId>
+                        <version>${jandex.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -112,8 +141,8 @@
                         <configuration>
                             <buildArgs>
                                 <arg>--enable-preview</arg>
-                                <arg>-H:DashboardDump=java-native -H:+DashboardAll</arg>
-                            <!-- <arg>-H:ReflectionConfigurationFiles=${project.build.resources[0].directory}/reflection.json</arg>-->
+                                <arg>--initialize-at-build-time=com.flowlogix.example</arg>
+                                <arg>-H:+DashboardAll</arg>
                             </buildArgs>
                             <agent>
                                 <enabled>true</enabled>
